Prevent weird placeholder text wrapping when editing preview text

--- a/src/templates/EmailEditorContent/EditPreviewText.css
+++ b/src/templates/EmailEditorContent/EditPreviewText.css
@@ -65,6 +65,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  box-sizing: border-box;
 }
 
 .edit-preview-text-text-area-container textarea::placeholder {
